New commit du 3 Mars

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,8 @@
+<% if user_signed_in? %>
+<div class="center hero-unit">
+    <h1>You'are signed in </h1>
+</div>
+<% else %>
 <div class="center hero-unit">
     <h1>Welcome to One Month Rails</h1>
 
@@ -7,6 +12,7 @@
       first application.
     </h2>
 
-    <%= link_to "Sign up now!", '#', 
+    <%= link_to "Sign up now!", new_user_registration_path, 
                                 :class=> "btn btn-large btn-primary" %>
 </div>
+<% end %>
