--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,12 @@
               <nav>
                 <ul class="nav pull-right">
                     <li><%= link_to "About",about_path %></li>
-                </ul>
+                    <% if user_signed_in? %>
+                    	<li><%= link_to "Sign Out",destroy_user_session_path, :method => :delete %></li>
+                    <% else %>
+                    	<li><%= link_to "Sign In",new_user_session_path %></li>
+                    <% end %>
+
               </nav>
             </div>
           </div>
